[gd_scene load_steps=11 format=3 uid="uid://dqpuppu5xh3wf"]

[ext_resource type="Script" path="res://Characters/Player.gd" id="1_cn7sa"]
[ext_resource type="Texture2D" uid="uid://jwdg8ovt63a1" path="res://Assets/hero_right.png" id="2_engle"]
[ext_resource type="Texture2D" uid="uid://bcqk0cev8ctbd" path="res://Assets/Hero.png" id="3_jx6og"]
[ext_resource type="Texture2D" uid="uid://bsdwmi7nphk1e" path="res://Assets/hero_up.png" id="4_261rn"]
[ext_resource type="PackedScene" uid="uid://pvkph6lbd033" path="res://Characters/attack_area_2d.tscn" id="4_o8b0x"]
[ext_resource type="PackedScene" uid="uid://dea1v8habyybk" path="res://Characters/attack_area_2d_left.tscn" id="6_m4111"]

[sub_resource type="Animation" id="Animation_dqklc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Attack_Right:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_va3uj"]
resource_name = "attack"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Attack_Right:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_whjxt"]
_data = {
"RESET": SubResource("Animation_dqklc"),
"attack": SubResource("Animation_va3uj")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_voro1"]
size = Vector2(106, 202)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_cn7sa")
texture_hero_right = ExtResource("2_engle")
texture_hero_down = ExtResource("3_jx6og")
texture_hero_up = ExtResource("4_261rn")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_whjxt")
}

[node name="Icon" type="Sprite2D" parent="."]
scale = Vector2(0.171875, 0.171875)
texture = ExtResource("3_jx6og")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(4, 0)
shape = SubResource("RectangleShape2D_voro1")

[node name="Attack_Right" parent="." instance=ExtResource("4_o8b0x")]
visible = false

[node name="Attack_Bottom" parent="." instance=ExtResource("4_o8b0x")]
visible = false
position = Vector2(-28, 67)
rotation = 1.57514

[node name="Attack_Top" parent="." instance=ExtResource("4_o8b0x")]
visible = false
position = Vector2(12, -35)
rotation = -1.16652

[node name="Attack_Left" parent="." instance=ExtResource("6_m4111")]
visible = false
position = Vector2(-107, -9)
